Sandbox snapshot commit

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow/tfjs": "^3.11.0",
     "loader-utils": "3.2.1",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
